--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,11 +16,11 @@ IF(${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_CURRENT_LIST_DIR})
   # CMAKE_CONFIGURATION_TYPES only exists for multi-config generators (like
   # Visual Studio or Xcode). For these projects, we won't define
   # CMAKE_BUILD_TYPE as it does not make sense.
-  IF(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
-    MESSAGE(STATUS "Setting CMAKE_BUILD_TYPE type to 'Debug' as none was specified.")
-    SET(CMAKE_BUILD_TYPE Debug CACHE STRING "Choose the type of build." FORCE)
-    SET_PROPERTY(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS "Debug" "Release")
-  ENDIF()
+  #IF(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
+  #  MESSAGE(STATUS "Setting CMAKE_BUILD_TYPE type to 'Debug' as none was specified.")
+  #  SET(CMAKE_BUILD_TYPE Debug CACHE STRING "Choose the type of build." FORCE)
+  #  SET_PROPERTY(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS "Debug" "Release")
+  #ENDIF()
 
   SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)
 
@@ -370,6 +370,7 @@ IF(PA_BUILD_SHARED)
   SET_PROPERTY(TARGET portaudio APPEND_STRING PROPERTY COMPILE_DEFINITIONS ${PA_PRIVATE_COMPILE_DEFINITIONS})
   TARGET_INCLUDE_DIRECTORIES(portaudio PRIVATE ${PA_PRIVATE_INCLUDE_PATHS})
   TARGET_INCLUDE_DIRECTORIES(portaudio PUBLIC include)
+  TARGET_INCLUDE_DIRECTORIES(portaudio INTERFACE include)
   TARGET_LINK_LIBRARIES(portaudio ${PA_LIBRARY_DEPENDENCIES})
 ENDIF()
 
@@ -378,6 +379,7 @@ IF(PA_BUILD_STATIC)
   SET_PROPERTY(TARGET portaudio_static APPEND_STRING PROPERTY COMPILE_DEFINITIONS ${PA_PRIVATE_COMPILE_DEFINITIONS})
   TARGET_INCLUDE_DIRECTORIES(portaudio_static PRIVATE ${PA_PRIVATE_INCLUDE_PATHS})
   TARGET_INCLUDE_DIRECTORIES(portaudio_static PUBLIC include)
+  TARGET_INCLUDE_DIRECTORIES(portaudio_static INTERFACE include)
   TARGET_LINK_LIBRARIES(portaudio_static ${PA_LIBRARY_DEPENDENCIES})
   IF(NOT PA_LIBNAME_ADD_SUFFIX)
     SET_PROPERTY(TARGET portaudio_static PROPERTY OUTPUT_NAME portaudio)
